[package]
name = "ddragon"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Library for pulling data from ddragon, with caching support."
homepage = "https://github.com/kade-robertson/ddragon"
repository = "https://github.com/kade-robertson/ddragon"
readme = "./README.md"
keywords = ["ddragon", "league-of-legends", "lol", "teamfight-tactics", "tft"]
categories = ["api-bindings"]

[dependencies]
cacache-sync = { version = "11.0", optional = true }
http-cache-reqwest = { version = "0.5", optional = true }
image = { version = "0.24", default-features = false, features = ["png"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
reqwest-middleware = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0", optional = true }
ureq = { version = "2.6", features = ["json"], optional = true }
url = { version = "2.3", optional = true }

[dev-dependencies]
mockito = "0.31.1"
tokio-test = "0.4.2"

[features]
default = ["sync"]
sync = ["dep:thiserror", "dep:url", "dep:ureq", "dep:cacache-sync"]
async = ["dep:thiserror", "dep:url", "dep:reqwest", "dep:reqwest-middleware", "dep:http-cache-reqwest"]
image = ["dep:image"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]