[package]
name = "ddragon"
version = "0.7.4"
rust-version = "1.67.1"
edition = "2021"
license = "MIT"
description = "Library for pulling data from ddragon, with caching support."
homepage = "https://github.com/kade-robertson/ddragon"
repository = "https://github.com/kade-robertson/ddragon"
readme = "./README.md"
keywords = ["ddragon", "league-of-legends", "lol", "teamfight-tactics", "tft"]
categories = ["api-bindings"]

[dependencies]
cacache = { version = "11.6", optional = true, default-features = false, features = ["tokio-runtime"] }
http-cache-reqwest = { version = "0.11", optional = true }
image = { version = "0.24", default-features = false, features = ["png"], optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json"], optional = true }
reqwest-middleware = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0", optional = true }
ureq = { version = "2.7", features = ["json"], optional = true }
url = { version = "2.3", optional = true }

[dev-dependencies]
mockito = "1"
tokio = "1"
tokio-test = "0.4"

[features]
default = ["sync"]
sync = ["dep:thiserror", "dep:url", "dep:ureq", "dep:cacache"]
async-base = ["dep:thiserror", "dep:url", "dep:reqwest", "dep:reqwest-middleware", "dep:http-cache-reqwest"]
async = ["async-base", "reqwest?/native-tls"]
async-rustls = ["async-base", "reqwest?/rustls"]
image = ["dep:image"]

[profile.dev]
debug = 0

[profile.release]
debug = 0

[patch.crates-io]
reflink = { git = "https://github.com/nicokoch/reflink", rev = "e8d93b46" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
